--- a/public/privacy.html
+++ b/public/privacy.html
@@ -1,69 +1,124 @@
-Política de Privacidad
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Política de Privacidad | Lokaly</title>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 16px;
+      line-height: 1.6;
+      color: #111827;
+    }
+    h1 {
+      font-size: 28px;
+      margin-bottom: 8px;
+    }
+    h2 {
+      font-size: 20px;
+      margin-top: 28px;
+    }
+    p, li {
+      font-size: 15px;
+      color: #374151;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    .updated {
+      color: #6B7280;
+      font-size: 14px;
+      margin-bottom: 24px;
+    }
+    footer {
+      margin-top: 40px;
+      font-size: 13px;
+      color: #6B7280;
+      text-align: center;
+    }
+    a {
+      color: #2563EB;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
 
-Última actualización: 14/12/2025
+  <h1>Política de Privacidad</h1>
+  <p class="updated"><strong>Última actualización:</strong> 14/12/2025</p>
 
-Esta Política de Privacidad describe cómo Lokaly recopila, usa y protege la información de los usuarios al utilizar la aplicación móvil.
+  <p>
+    Esta Política de Privacidad describe cómo Lokaly recopila, usa y protege la
+    información de los usuarios al utilizar la aplicación móvil.
+  </p>
 
-⸻
+  <h2>1. Información que recopilamos</h2>
+  <p>La aplicación puede recopilar la siguiente información:</p>
+  <ul>
+    <li>Información de la cuenta: nombre, correo electrónico u otros datos proporcionados al registrarse.</li>
+    <li>Contenido generado por el usuario: productos, imágenes, descripciones u otra información que el usuario decida publicar.</li>
+    <li>Imágenes y cámara: la aplicación puede solicitar acceso a la cámara únicamente para permitir al usuario tomar y subir fotos de productos o contenido dentro de la app.</li>
+    <li>Información técnica básica: como tipo de dispositivo, sistema operativo y errores de la aplicación, con fines de mejora del servicio.</li>
+  </ul>
 
-1. Información que recopilamos
+  <h2>2. Uso de la información</h2>
+  <p>La información recopilada se utiliza para:</p>
+  <ul>
+    <li>Proporcionar y mejorar las funcionalidades de la aplicación.</li>
+    <li>Permitir la publicación y visualización de productos y servicios.</li>
+    <li>Mejorar la experiencia del usuario.</li>
+    <li>Mantener la seguridad y correcto funcionamiento de la plataforma.</li>
+  </ul>
 
-La aplicación puede recopilar la siguiente información:
-	•	Información de la cuenta: nombre, correo electrónico u otros datos proporcionados al registrarse.
-	•	Contenido generado por el usuario: productos, imágenes, descripciones u otra información que el usuario decida publicar.
-	•	Imágenes y cámara: la aplicación puede solicitar acceso a la cámara únicamente para permitir al usuario tomar y subir fotos de productos o contenido dentro de la app.
-	•	Información técnica básica: como tipo de dispositivo, sistema operativo y errores de la aplicación, con fines de mejora del servicio.
+  <h2>3. Uso de la cámara</h2>
+  <p>
+    El acceso a la cámara se utiliza exclusivamente para que el usuario pueda tomar
+    fotografías dentro de la aplicación.
+  </p>
+  <p>
+    Lokaly no accede a la cámara sin el consentimiento del usuario ni graba imágenes
+    o videos sin una acción directa del mismo.
+  </p>
 
-⸻
+  <h2>4. Compartición de información</h2>
+  <p>Lokaly no vende ni comparte información personal con terceros, excepto cuando sea necesario para:</p>
+  <ul>
+    <li>Cumplir con obligaciones legales.</li>
+    <li>Proveer servicios técnicos esenciales (por ejemplo, servicios de hosting o infraestructura).</li>
+  </ul>
 
-2. Uso de la información
+  <h2>5. Seguridad</h2>
+  <p>
+    Implementamos medidas razonables para proteger la información del usuario contra
+    accesos no autorizados, pérdida o uso indebido.
+  </p>
 
-La información recopilada se utiliza para:
-	•	Proporcionar y mejorar las funcionalidades de la aplicación.
-	•	Permitir la publicación y visualización de productos y servicios.
-	•	Mejorar la experiencia del usuario.
-	•	Mantener la seguridad y correcto funcionamiento de la plataforma.
+  <h2>6. Derechos del usuario</h2>
+  <p>El usuario puede:</p>
+  <ul>
+    <li>Solicitar la actualización o eliminación de su información.</li>
+    <li>Revocar permisos otorgados (como cámara) desde la configuración del dispositivo.</li>
+  </ul>
 
-⸻
+  <h2>7. Cambios a esta política</h2>
+  <p>
+    Esta política puede actualizarse ocasionalmente. Cualquier cambio será publicado
+    en esta misma página.
+  </p>
 
-3. Uso de la cámara
+  <h2>8. Contacto</h2>
+  <p>Si tienes preguntas sobre esta Política de Privacidad, puedes contactarnos en:</p>
+  <p>
+    📧 Correo: <a href="mailto:soporte@lokaly.site">soporte@lokaly.site</a><br />
+    🌐 Sitio web: <a href="https://lokaly.site">https://lokaly.site</a>
+  </p>
 
-El acceso a la cámara se utiliza exclusivamente para que el usuario pueda tomar fotografías dentro de la aplicación.
-Lokaly no accede a la cámara sin el consentimiento del usuario ni graba imágenes o videos sin una acción directa del mismo.
+  <footer>
+    © 2025 Lokaly
+  </footer>
 
-⸻
-
-4. Compartición de información
-
-Lokaly no vende ni comparte información personal con terceros, excepto cuando sea necesario para:
-	•	Cumplir con obligaciones legales.
-	•	Proveer servicios técnicos esenciales (por ejemplo, servicios de hosting o infraestructura).
-
-⸻
-
-5. Seguridad
-
-Implementamos medidas razonables para proteger la información del usuario contra accesos no autorizados, pérdida o uso indebido.
-
-⸻
-
-6. Derechos del usuario
-
-El usuario puede:
-	•	Solicitar la actualización o eliminación de su información.
-	•	Revocar permisos otorgados (como cámara) desde la configuración del dispositivo.
-
-⸻
-
-7. Cambios a esta política
-
-Esta política puede actualizarse ocasionalmente. Cualquier cambio será publicado en esta misma página.
-
-⸻
-
-8. Contacto
-
-Si tienes preguntas sobre esta Política de Privacidad, puedes contactarnos en:
-
-📧 Correo: soporte@lokaly.site
-🌐 Sitio web: https://lokaly.site
+</body>
+</html>
