flujo de vendedot y user completo

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -1,124 +1,195 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Política de Privacidad | Lokaly</title>
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 16px;
-      line-height: 1.6;
-      color: #111827;
-    }
-    h1 {
-      font-size: 28px;
-      margin-bottom: 8px;
-    }
-    h2 {
-      font-size: 20px;
-      margin-top: 28px;
-    }
-    p, li {
-      font-size: 15px;
-      color: #374151;
-    }
-    ul {
-      padding-left: 20px;
-    }
-    .updated {
-      color: #6B7280;
-      font-size: 14px;
-      margin-bottom: 24px;
-    }
-    footer {
-      margin-top: 40px;
-      font-size: 13px;
-      color: #6B7280;
-      text-align: center;
-    }
-    a {
-      color: #2563EB;
-      text-decoration: none;
-    }
-  </style>
-</head>
-<body>
+<!doctype html>
+<html lang="es-MX">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Política de Privacidad | Lokaly</title>
+    <meta name="description" content="Política de Privacidad de Lokaly" />
+    <style>
+      :root {
+        --text: #0f172a;
+        --muted: rgba(15, 23, 42, 0.65);
+        --border: rgba(15, 23, 42, 0.12);
+        --bg: #ffffff;
+        --card: rgba(15, 23, 42, 0.02);
+        --accent: #2563eb;
+      }
+      body {
+        margin: 0;
+        font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+        color: var(--text);
+        background: var(--bg);
+        line-height: 1.6;
+      }
+      .wrap {
+        max-width: 900px;
+        margin: 0 auto;
+        padding: 28px 16px 64px;
+      }
+      header {
+        padding: 14px 0 10px;
+        border-bottom: 1px solid var(--border);
+        margin-bottom: 18px;
+      }
+      h1 {
+        margin: 0;
+        font-size: 28px;
+        letter-spacing: -0.02em;
+      }
+      .updated {
+        margin: 6px 0 0;
+        font-weight: 700;
+        color: var(--muted);
+        font-size: 14px;
+      }
+      .intro {
+        margin: 16px 0 0;
+        color: rgba(15, 23, 42, 0.78);
+        font-weight: 600;
+      }
+      section {
+        margin-top: 18px;
+        padding: 16px 16px;
+        border: 1px solid var(--border);
+        border-radius: 16px;
+        background: #fff;
+        box-shadow: 0 12px 26px rgba(15, 23, 42, 0.04);
+      }
+      h2 {
+        margin: 0 0 10px;
+        font-size: 18px;
+        letter-spacing: -0.01em;
+      }
+      ul {
+        margin: 0;
+        padding-left: 18px;
+      }
+      li {
+        margin: 6px 0;
+      }
+      hr.sep {
+        border: 0;
+        border-top: 1px dashed var(--border);
+        margin: 18px 0;
+      }
+      .contact a {
+        color: var(--accent);
+        text-decoration: none;
+        font-weight: 800;
+      }
+      .contact a:hover {
+        text-decoration: underline;
+      }
+      .note {
+        margin-top: 10px;
+        font-size: 13px;
+        color: var(--muted);
+      }
+    </style>
+  </head>
 
-  <h1>Política de Privacidad</h1>
-  <p class="updated"><strong>Última actualización:</strong> 14/12/2025</p>
+  <body>
+    <main class="wrap">
+      <header>
+        <h1>Política de Privacidad</h1>
+        <p class="updated">Última actualización: 20/01/2026</p>
+        <p class="intro">
+          Esta Política de Privacidad describe cómo Lokaly recopila, utiliza y protege la información de los usuarios al utilizar la aplicación móvil y los servicios asociados.
+        </p>
+      </header>
 
-  <p>
-    Esta Política de Privacidad describe cómo Lokaly recopila, usa y protege la
-    información de los usuarios al utilizar la aplicación móvil.
-  </p>
+      <section id="info-que-recopilamos">
+        <h2>1. Información que recopilamos</h2>
+        <p>Lokaly puede recopilar la siguiente información:</p>
+        <ul>
+          <li><strong>Información de la cuenta:</strong> número telefónico, nombre u otros datos proporcionados voluntariamente.</li>
+          <li><strong>Contenido generado por el usuario:</strong> productos, imágenes, descripciones, precios y demás información publicada por vendedores.</li>
+          <li><strong>Imágenes y cámara:</strong> la aplicación puede solicitar acceso a la cámara únicamente para permitir al usuario tomar y subir imágenes de productos.</li>
+          <li><strong>Información técnica básica:</strong> tipo de dispositivo, sistema operativo, métricas de uso y errores, con fines de mejora del servicio.</li>
+        </ul>
+      </section>
 
-  <h2>1. Información que recopilamos</h2>
-  <p>La aplicación puede recopilar la siguiente información:</p>
-  <ul>
-    <li>Información de la cuenta: nombre, correo electrónico u otros datos proporcionados al registrarse.</li>
-    <li>Contenido generado por el usuario: productos, imágenes, descripciones u otra información que el usuario decida publicar.</li>
-    <li>Imágenes y cámara: la aplicación puede solicitar acceso a la cámara únicamente para permitir al usuario tomar y subir fotos de productos o contenido dentro de la app.</li>
-    <li>Información técnica básica: como tipo de dispositivo, sistema operativo y errores de la aplicación, con fines de mejora del servicio.</li>
-  </ul>
+      <section id="uso-de-informacion">
+        <h2>2. Uso de la información</h2>
+        <p>La información recopilada se utiliza para:</p>
+        <ul>
+          <li>Proporcionar y operar las funcionalidades de Lokaly.</li>
+          <li>Permitir la publicación y visualización de productos y catálogos.</li>
+          <li>Facilitar la comunicación entre compradores y vendedores.</li>
+          <li>Detectar, prevenir y gestionar actividades indebidas o contenido que infrinja nuestras políticas.</li>
+          <li>Mejorar la experiencia y seguridad de la plataforma.</li>
+        </ul>
+      </section>
 
-  <h2>2. Uso de la información</h2>
-  <p>La información recopilada se utiliza para:</p>
-  <ul>
-    <li>Proporcionar y mejorar las funcionalidades de la aplicación.</li>
-    <li>Permitir la publicación y visualización de productos y servicios.</li>
-    <li>Mejorar la experiencia del usuario.</li>
-    <li>Mantener la seguridad y correcto funcionamiento de la plataforma.</li>
-  </ul>
+      <section id="moderacion">
+        <h2>3. Moderación y contenido</h2>
+        <p>Lokaly se reserva el derecho de:</p>
+        <ul>
+          <li>Revisar, ocultar, pausar o marcar como reportado cualquier contenido que pueda infringir políticas internas, leyes aplicables o reportes de usuarios.</li>
+          <li>Restringir temporal o permanentemente la visibilidad de productos mientras se realiza una revisión.</li>
+        </ul>
+        <p><strong>El vendedor es responsable del contenido que publica.</strong></p>
+      </section>
 
-  <h2>3. Uso de la cámara</h2>
-  <p>
-    El acceso a la cámara se utiliza exclusivamente para que el usuario pueda tomar
-    fotografías dentro de la aplicación.
-  </p>
-  <p>
-    Lokaly no accede a la cámara sin el consentimiento del usuario ni graba imágenes
-    o videos sin una acción directa del mismo.
-  </p>
+      <section id="camara">
+        <h2>4. Uso de la cámara</h2>
+        <p>
+          El acceso a la cámara se utiliza exclusivamente para permitir al usuario tomar fotografías dentro de la aplicación.
+        </p>
+        <p>
+          Lokaly no accede a la cámara sin el consentimiento del usuario ni captura imágenes sin una acción explícita del mismo.
+        </p>
+      </section>
 
-  <h2>4. Compartición de información</h2>
-  <p>Lokaly no vende ni comparte información personal con terceros, excepto cuando sea necesario para:</p>
-  <ul>
-    <li>Cumplir con obligaciones legales.</li>
-    <li>Proveer servicios técnicos esenciales (por ejemplo, servicios de hosting o infraestructura).</li>
-  </ul>
+      <section id="comunicacion">
+        <h2>5. Comunicación entre usuarios</h2>
+        <p>
+          Lokaly puede facilitar el contacto entre compradores y vendedores (por ejemplo, mediante enlaces a WhatsApp).
+        </p>
+        <p>
+          Lokaly no controla ni almacena las conversaciones externas realizadas fuera de la plataforma y no es responsable por acuerdos, pagos o interacciones realizadas directamente entre usuarios.
+        </p>
+      </section>
 
-  <h2>5. Seguridad</h2>
-  <p>
-    Implementamos medidas razonables para proteger la información del usuario contra
-    accesos no autorizados, pérdida o uso indebido.
-  </p>
+      <section id="comparticion">
+        <h2>6. Compartición de información</h2>
+        <p>Lokaly no vende información personal. Solo podrá compartir datos cuando sea necesario para:</p>
+        <ul>
+          <li>Cumplir obligaciones legales.</li>
+          <li>Operar servicios técnicos esenciales (infraestructura, almacenamiento, seguridad).</li>
+        </ul>
+      </section>
 
-  <h2>6. Derechos del usuario</h2>
-  <p>El usuario puede:</p>
-  <ul>
-    <li>Solicitar la actualización o eliminación de su información.</li>
-    <li>Revocar permisos otorgados (como cámara) desde la configuración del dispositivo.</li>
-  </ul>
+      <section id="seguridad">
+        <h2>7. Seguridad</h2>
+        <p>
+          Implementamos medidas razonables para proteger la información contra accesos no autorizados, pérdida o uso indebido. Sin embargo, ningún sistema es completamente seguro.
+        </p>
+      </section>
 
-  <h2>7. Cambios a esta política</h2>
-  <p>
-    Esta política puede actualizarse ocasionalmente. Cualquier cambio será publicado
-    en esta misma página.
-  </p>
+      <section id="derechos">
+        <h2>8. Derechos del usuario</h2>
+        <p>El usuario puede:</p>
+        <ul>
+          <li>Solicitar la actualización o eliminación de su información.</li>
+          <li>Revocar permisos otorgados (como cámara) desde su dispositivo.</li>
+          <li>Solicitar la eliminación de su catálogo o productos.</li>
+        </ul>
+      </section>
 
-  <h2>8. Contacto</h2>
-  <p>Si tienes preguntas sobre esta Política de Privacidad, puedes contactarnos en:</p>
-  <p>
-    📧 Correo: <a href="mailto:soporte@lokaly.site">soporte@lokaly.site</a><br />
-    🌐 Sitio web: <a href="https://lokaly.site">https://lokaly.site</a>
-  </p>
+      <section id="cambios">
+        <h2>9. Cambios a esta política</h2>
+        <p>
+          Esta Política puede actualizarse ocasionalmente. Las modificaciones serán publicadas en esta misma página y entrarán en vigor al momento de su publicación.
+        </p>
+      </section>
 
-  <footer>
-    © 2025 Lokaly
-  </footer>
-
-</body>
+      <section id="contacto" class="contact">
+        <h2>10. Contacto</h2>
+        <p>📧 Correo: <a href="mailto:soporte@lokaly.site">soporte@lokaly.site</a></p>
+        <p>🌐 Sitio web: <a href="https://lokaly.site" rel="noopener noreferrer" target="_blank">https://lokaly.site</a></p>
+        <p class="note">Si tienes preguntas sobre esta Política de Privacidad, contáctanos por los medios anteriores.</p>
+      </section>
+    </main>
+  </body>
 </html>
